<resources>
    <string name="app_name">Plan de Natación</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="home_second">Home Second</string>
    <string name="add_MacroCiclo">Añadir macro ciclo para competencia fundamental</string>
    <string name="view_MacroCiclo">Visualizar macro ciclo para competencia fundamental</string>
    <string name="edit_MacroCiclo">Modificar macro ciclo para competencia fundamental</string>
    <string name="view_stadistics">Visualizar estadisticas</string>
    <string name="menu_controlP">Menú pruebas</string>
    <string name="menu_añadirP">Añadir pruebas</string>
    <string name="menu_cancelarT">Cancelar tiempo</string>
    <string name="menu_mostrarP">Mostrar pruebas</string>
    <string name="menu_eliminarMC">Eliminar macro ciclo</string>
    <string name="menu_info">Información legal</string>
    <string name="menu_cerrarSesion">Cerrar sesión</string>
    <string name="question_controlpruebas">El día de hoy desea realizar un control de:</string>
    <string name="opcion1_controlpruebas">Control de test</string>
    <string name="opcion2_controlpruebas">Control de competencias</string>
    <string name="opcion0_anhadir">Añadir macro ciclo</string>
    <string name="opcion1_titlecalendaranhadir">Introduzca los siguientes datos acerca de la competencia fundamental</string>
    <string name="opcion2_nombre">Nombre</string>
    <string name="opcion3_ingresa_nombre">Ingrese nombre de la Periodización</string>
    <string name="opcion4_indique_fecha1">Indique el inicio del macro ciclo</string>
    <string name="opcion5_fecha">DD/MM/AAAA</string>
    <string name="opcion6_indique_fecha2">Indique el final del macro ciclo</string>
    <string name="opcion7_Retroceder">Retroceder</string>
    <string name="opcion8_Avanzar">Avanzar</string>
    <string name="opcion0_anhadir_DA">DÍAS DE AGUA</string>
    <string name="opcion1_title_hacer">Ahora, definamos días que haremos</string>
    <string name="opcion2_resistencia">Resistencia</string>
    <string name="opcion3_tecnica">Técnica</string>
    <string name="opcion4_velocidad">Velocidad</string>
    <string name="opcion0_anhadir_DT">DÍAS DE TIERRA</string>
    <string name="opcion2_FC">Fuerza de construcción</string>
    <string name="opcion3_FCon">Fuerza de conversión</string>
    <string name="opcion4_Fmax">Fuerza máxima</string>
    <string name="introDatos">Introduzca los siguientes datos acerca de la competencia fundamental</string>
    <string name="label1_nombre">Nombre</string>
    <string name="IntroNombre">Ingrese el nombre de la periodización</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Ingresar</string>
    <string name='action_register'>Registrarse</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">Welcome !</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be 5 characters</string>
    <string name="login_failed">Login failed</string>
    <string name="volumen_agua">Volumen para días de agua (mts):</string>
    <string name="ingresa_valor">Ingrese el valor aquí</string>
    <string name="volumen_tierra">Volumen para días de tierra (min):</string>
    <string name="dia_agua_previa">Días de agua (Metros)</string>
    <string name="dia_tierra_previa">Días de tierra (Minutos)</string>
    <string name="previous_visual">En resumen, el macro ciclo queda de la siguiente manera:</string>
    <string name="acceso_google">Acceder con:</string>
    <string name="terminos">Acepto los términos y condiciones</string>
    <string name="seleccion_dia">Seleccione el día que desea consultar:</string>
    <string name="definir_dia">Defina el día correspondiente</string>
    <string name="modificar_plan">Modificar plan de natación</string>
    <string name="string_1_mes">Modificar porcentaje mes</string>
    <string name="string_2_semana">Modificar porcentaje semana</string>
    <string name="string_3_int">Modificar integrantes</string>
    <string name="generar_estadisticas">Generar estadísticas</string>
    <string name="enunciado_estadis">Defina que estadística desea generar</string>
    <string name="esta_periodo">Estadísticas por periodo</string>
    <string name="esta_mes">Estadísticas por mes</string>
    <string name="esta_test">Estadísticas por test</string>
    <string name="esta_comp">Estadística por competencia preparatoria</string>
    <string name="mostrar_ciclo">Mostrar Macro Ciclo</string>
    <string name="inicio">Inicio:</string>
    <string name="nombre">Nombre:</string>
    <string name="fin">Fin:</string>
    <string name="info_DT">Información días tierra</string>
    <string name="info_DA">Información días agua</string>
    <string name="integra">Integrantes:</string>
    <string name="opciones">Opciones</string>
    <string name="add_pruebas">Añadir pruebas</string>
    <string name="seleccion_pruebas">Seleccione la prueba que desea realizar:</string>
    <string name="test">Test</string>
    <string name="comp_prep">Competencia Preparatoria</string>
    <string name="nom_test">Ingrese el nombre del test</string>
    <string name="enun_fecha_test">Indiquela fecha en que se realizará el test:</string>
    <string name="nom_comp">Ingrese el nombre de la competencia preparatoria:</string>
    <string name="enun_fecha_comp">Indiquela fecha en que se realizará la competencia preparatoria:</string>
    <string name="enun_control_pruebas">El día de hoy desea realizar registro de:</string>
    <string name="control_test">Control de Test</string>
    <string name="control_comp">Control de Competencia Preparatoria</string>
    <string name="semana_lunes">Lunes</string>
    <string name="semana_martes">Martes</string>
    <string name="semana_miercoles">Miércoles</string>
    <string name="semana_jueves">Jueves</string>
    <string name="semana_viernes">Viernes</string>
    <string name="semana_sabado">Sábado</string>
    <string name="semana_domigno">Domingo</string>
    <string name="seleccion_dias">Seleccione los días de entrenamiento:</string>
    <string name="accept">Aceptar</string>
    <string name="decline">Cancelar</string>
    <string name="volumen">Volumen</string>
    <string name="resumen">Vista previa</string>
    <string name="nom_integ">Nombre del nadador:</string>
    <string name="nom_prueba">Nombre de la prueba:</string>
    <string name="anadir_pr">Añadir</string>
    <string name="sel_prue">Selección de prueba</string>
    <string name="ingreso_integ">Ingrese los integrantes del macro ciclo:</string>
    <string name="crear_ciclo">Crear</string>
    <string name="info_ciclo">Información Ciclo</string>
    <string name="vol_tierra">Volumen en tierra:</string>
    <string name="vol_agua">Volumen en agua:</string>
    <string name="info_mes">Info mes</string>
    <string name="info_sem">Info semana</string>
    <string name="info_dia">Info día</string>
    <string name="salir">Salir</string>
    <string name="info_integ">Información del nadador:</string>
    <string name="opci">Opciones</string>
    <string name="enun_nadador_pruebas">Seleccione las pruebas a realizar para este nadador:</string>
    <string name="prue_airelibre">Pruebas libre</string>
    <string name="prue_espalda">Pruebas de espalda</string>
    <string name="prue_pecho">Pruebas de pecho</string>
    <string name="prue_mari">Pruebas mariposa</string>
    <string name="prue_comb">Pruebas de combinado individual</string>
    <string name="enun_integ">Por favor añadir los nadadores que serán participantes de este Macro Ciclo:</string>
    <string name="modi_porce">Modificar porcentajes</string>
    <string name="add_int">Añadir nadador</string>
    <string name="desc_pdf_gen">Descargar pdf general</string>
    <string name="desc_pdf_dia">Descargar pdf día actual</string>
    <string name="opc_info_porc">Cambiar porcentaje</string>
    <string name="per_1">Periodo 1</string>
    <string name="per_2">Periodo 2</string>
    <string name="per_3">Periodo 3</string>
    <string name="dia_num">Día # </string>
    <string name="periodo_num">Periodo # :</string>
    <string name="mes_num">Mes # :</string>
    <string name="sem_num">Semana # :</string>
    <string name="habilidades">Habilidades :</string>
    <string name="modif_porc_periodo">Seleccione el periodo a modificar :</string>
    <string name="total">Total :</string>
    <string name="consul_dia">Consulta día</string>
    <string name="consul_enun_dia">Consultar el siguiente día: </string>
    <string name="menu_macrociclo">Menú Macro Ciclo</string>
    <string name="enun_menuciclo">Seleccione la función que desea realizar:</string>
    <string name="select_cycle">Select cycle</string>
    <string name="anadir_notification">Añadir notificación</string>
    <string name="flexibilidad">Flexibilidad</string>
    <string name="coordinacion">Coordinación</string>
    <string name="selectcycletest">Select cycle test</string>
    <string name="info_type">Tipo de test</string>
    <string name="list_integrant">Lista de integrantes pruebas</string>

    <string-array name="periodos">
        <item>Seleccione</item>
        <item>Periodo 1</item>
        <item>Periodo 2</item>
        <item>Periodo 3</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dia_especifico">Día específico</string>
    <string name="seleccion_macrociclo">Selección Macrociclo</string>
    <string name="statistics">Estadísticas</string>
    <string name="test_type">Tipo de Prueba</string>
    <string name="select_test_type">Seleccionar el tipo de prueba:</string>
    <string name="text_ingresar_tiempo_obtenido">Ingrese el tiempo obtenido en segundos:</string>
    <string name="pruebas_realizadas">Pruebas Realizadas</string>
    <string name="seleccione_nadador">Seleccione el nadador</string>
    <string name="seleccion_a_eliminar">Seleccione el macrociclo a eliminar</string>
</resources>
