<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo_dialogo"
        android:src="@mipmap/logo_foreground"
        android:layout_gravity="center"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:textSize="13dp"
        android:id="@+id/enun_diaintprueb"
        android:fontFamily="@font/bs_regular"
        android:gravity="center"
        android:text="@string/enun_nadador_pruebas"/>


    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:text="@string/prue_airelibre"
        android:layout_marginTop="20dp"
        android:id="@+id/pru_airelibre"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/bs_regular"
        android:buttonTint="@color/colorWhite"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:text="@string/prue_comb"
        android:id="@+id/pru_combin"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/bs_regular"
        android:buttonTint="@color/colorWhite"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:id="@+id/pru_espal"
        android:text="@string/prue_espalda"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/bs_regular"
        android:buttonTint="@color/colorWhite"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:id="@+id/pru_mari"
        android:text="@string/prue_mari"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/bs_regular"
        android:buttonTint="@color/colorWhite"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:text="@string/prue_pecho"
        android:id="@+id/pru_pecho"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/bs_regular"
        android:buttonTint="@color/colorWhite"/>

    </LinearLayout>

</LinearLayout>