<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_addIntegrantes"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context="com.cycleadd.AddIntegrantes">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/tittle_addinteg"
            android:layout_width="250dp"
            android:fontFamily="@font/bs_regular"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/add_int"
            android:textColor="@color/colorWhite"
            android:textSize="27dp" />

        <ImageView
            android:id="@+id/banner_addinteg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@mipmap/logo_foreground" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:textSize="13dp"
        android:id="@+id/enun_diainteg"
        android:fontFamily="@font/bs_regular"
        android:gravity="center"
        android:text="@string/nom_integ"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/borderedondo_txt"
        android:fontFamily="@font/bs_regular"
        android:textSize="14dp"
        android:id="@+id/nom_diainteg"
        android:textColor="@color/colorBanner"
        android:layout_margin="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:textSize="14dp"
        android:layout_marginTop="15dp"
        android:id="@+id/info_diainteg"
        android:fontFamily="@font/bs_regular"
        android:gravity="center"
        android:text="@string/info_integ"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/borderedondo_txt"
        android:fontFamily="@font/bs_regular"
        android:textSize="14dp"
        android:id="@+id/infor_diainteg"
        android:textColor="@color/colorBanner"
        android:layout_margin="15dp"/>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:textSize="13dp"
        android:id="@+id/enun_diaintprueb"
        android:fontFamily="@font/bs_regular"
        android:gravity="center"
        android:text="@string/enun_nadador_pruebas"/>


    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:text="@string/prue_airelibre"
        android:layout_marginTop="20dp"
        android:id="@+id/pru_airelibre"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/bs_regular"
        android:buttonTint="@color/colorWhite"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:text="@string/prue_comb"
        android:id="@+id/pru_combin"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/bs_regular"
        android:buttonTint="@color/colorWhite"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:id="@+id/pru_espal"
        android:text="@string/prue_espalda"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/bs_regular"
        android:buttonTint="@color/colorWhite"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:id="@+id/pru_mari"
        android:text="@string/prue_mari"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/bs_regular"
        android:buttonTint="@color/colorWhite"/>

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:text="@string/prue_pecho"
        android:id="@+id/pru_pecho"
        android:textColor="@color/colorWhite"
        android:fontFamily="@font/bs_regular"
        android:buttonTint="@color/colorWhite"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="136dp"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:gravity="center">

        <Button
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginRight="10dp"
            android:fontFamily="@font/bs_regular"
            android:text="@string/salir"
            android:textAllCaps="false"
            android:id="@+id/retro_addinteg"
            android:background="@drawable/borderedondo_banner"
            android:textColor="@color/colorWhite"
            android:textSize="14dp"
            android:layout_gravity="center"
            android:gravity="center"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/bs_regular"
            android:text="@string/anadir_pr"
            android:textAllCaps="false"
            android:id="@+id/avan_addinteg"
            android:textSize="14dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:background="@drawable/borderedondo_banner"
            android:textColor="@color/colorWhite"/>


    </LinearLayout>


</LinearLayout>