<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.e.periodizacionnatacion.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment android:id="@+id/nav_addcyle"
        android:name="com.app.AddCycle_Fragment"
        android:label="@string/add_MacroCiclo"
        tools:layout="@layout/fragment_add_cycle" />

    <fragment android:id="@+id/nav_addprueba"
        android:name="com.e.periodizacionnatacion.SeleccionPrueba"
        android:label="@string/add_pruebas"
        tools:layout="@layout/fragment_seleccion_prueba" />

    <fragment android:id="@+id/nav_control"
        android:name="com.app.AddCycle_Fragment"
        android:label="@string/add_MacroCiclo"
        tools:layout="@layout/fragment_add_cycle" />



</navigation>