<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    android:orientation="vertical"
    android:layout_gravity="center"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/logo_dialogo"
        android:src="@mipmap/logo_foreground"
        android:layout_gravity="center"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/bs_regular"
        android:text="@string/modi_porce"
        android:textAllCaps="false"
        android:id="@+id/opc_porcentaje"
        android:layout_gravity="center"
        android:background="@drawable/botonredondo_second"
        android:textColor="@color/colorWhite"
        android:textSize="14dp"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/bs_regular"
        android:text="@string/add_int"
        android:textAllCaps="false"
        android:id="@+id/opc_addinteg"
        android:layout_gravity="center"
        android:background="@drawable/botonredondo_second"
        android:textColor="@color/colorWhite"
        android:textSize="14dp"/>


    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/bs_regular"
        android:text="@string/desc_pdf_dia"
        android:textAllCaps="false"
        android:id="@+id/opc_pdfdia"
        android:layout_gravity="center"
        android:background="@drawable/botonredondo_second"
        android:textColor="@color/colorWhite"
        android:textSize="14dp"/>


    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/bs_regular"
        android:text="@string/desc_pdf_gen"
        android:textAllCaps="false"
        android:id="@+id/opc_pdfgeneral"
        android:layout_gravity="center"
        android:background="@drawable/botonredondo_second"
        android:textColor="@color/colorWhite"
        android:textSize="14dp"/>

    <Button
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/bs_regular"
        android:text="@string/menu_eliminarMC"
        android:textAllCaps="false"
        android:id="@+id/opc_delete"
        android:layout_gravity="center"
        android:background="@drawable/botonredondo_second"
        android:textColor="@color/colorWhite"
        android:textSize="14dp"/>

</LinearLayout>