<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/calendarioanhadir"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    android:orientation="vertical"
    android:visibility="visible"
    tools:context=".ui.calendarioanhadir.CalendarioAnhadirFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_title_calenanhadir"
            android:layout_width="250dp"
            android:fontFamily="@font/bs_regular"
            android:layout_height="match_parent"
            android:layout_gravity="left"
            android:gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="15dp"
            android:text="@string/opcion0_anhadir"
            android:textColor="@color/colorWhite"
            android:textSize="27dp" />

        <ImageView
            android:id="@+id/imgv_previa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:src="@mipmap/logo_foreground" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:textColor="@color/colorWhite"
            android:text="@string/enunciado_estadis"
            android:layout_gravity="center"
            android:gravity="center"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/esta_periodo"
            android:textSize="16dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorSecond"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:fontFamily="@font/bs_regular"
            android:textAllCaps="false"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/esta_mes"
            android:layout_marginTop="15dp"
            android:textSize="16dp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorSecond"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:fontFamily="@font/bs_regular"
            android:textAllCaps="false"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/esta_comp"
            android:textSize="16dp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorSecond"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:fontFamily="@font/bs_regular"
            android:textAllCaps="false"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/esta_test"
            android:textSize="16dp"
            android:layout_marginTop="15dp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorSecond"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:fontFamily="@font/bs_regular"
            android:textAllCaps="false"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/opcion7_Retroceder"
            android:textSize="16dp"
            android:layout_marginTop="25dp"
            android:textColor="@color/colorWhite"
            android:background="@color/colorBanner"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:fontFamily="@font/bs_regular"
            android:textAllCaps="false"/>


    </LinearLayout>
</LinearLayout>
